--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Jacob B. Madrid"
   avatar           : "profile.png"
   bio              : "Assistant Research Professor"
-  location         : "Duke University"
-  employer         :
+  location         : "Durham, NC, USA"
+  employer         : ""
   pubmed           : 
   googlescholar    : 
   email            :
