Linked to google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Duke University"
   employer         : 
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=5JkchHcAAAAJ&hl=en&oi=ao"
   email            :
   researchgate     :  
   uri              :
