--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=5JkchHcAAAAJ&hl=en&oi=ao"
-  email            :
+  email            : "jacob.madrid@duke.edu"
   researchgate     :  
   uri              :
   bitbucket        :
