Changed teaching to markdown.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,19 +4,19 @@ main:
     url: https://scholar.google.com/citations?user=5JkchHcAAAAJ&hl=en&oi=ao
 
   # - title: "Talks"
-  #   url: /talks/    
+  #   url: /talks/
 
-  # - title: "Teaching"
-  #   url: /teaching/    
-    
+  - title: "Teaching"
+    url: /teaching/
+
   # - title: "Portfolio"
   #   url: /portfolio/
-        
+
   # - title: "Blog Posts"
   #   url: /year-archive/
-    
+
   - title: "CV"
     url: /files/madrid_cv.pdf
-    
+
   # - title: "Guide"
   #   url: /markdown/
