--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale: "en-US"
-title: "Jacob B. Madrid"
+title: "Home"
 title_separator: "-"
 name: &name "Home"
 description: &description "personal description"
